Tested synchronized with/without -XX:+UseRTMLocking against ReentrantLock